--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ ca-certificates=2021.7.5=h06a4308_1
 cached-property=1.5.2=pypi_0
 cachetools=4.2.2=pyhd3eb1b0_0
 cairo=1.16.0=hf32fb01_1
-celery=5.0.5=pyhd3eb1b0_0
+celery=5.2.2
 certifi=2021.5.30=py37h06a4308_0
 cffi=1.14.6=py37h400218f_0
 chardet=4.0.0=py37h06a4308_1003
@@ -93,7 +93,7 @@ openssl=1.1.1k=h27cfd23_0
 opt_einsum=3.3.0=pyhd3eb1b0_1
 pandas=1.2.4=py37ha9443f7_0
 pcre=8.45=h295c915_0
-pillow=8.3.1=py37h2c7a002_0
+pillow=9.0.0
 pip=21.1.3=py37h06a4308_0
 pixman=0.40.0=h7b6447c_0
 progressbar2=3.53.1=pypi_0
@@ -130,7 +130,7 @@ sqlite=3.36.0=hc218d9a_0
 tensorboard=2.2.2=pypi_0
 tensorboard-data-server=0.6.1=pypi_0
 tensorboard-plugin-wit=1.8.0=pypi_0
-tensorflow=2.2.0=mkl_py37h6e9ce2d_0
+tensorflow=2.3.4
 tensorflow-base=2.2.0=mkl_py37hd506778_0
 tensorflow-estimator=2.2.0=pypi_0
 termcolor=1.1.0=pypi_0
